fix: removido funçao de spacing e corrigido nomenclaturas

--- a/src/scss/mixins/tokens.scss
+++ b/src/scss/mixins/tokens.scss
@@ -3,7 +3,6 @@
 @use 'sass:map';
 @use '../tokens/primitives/colors.scss' as *;
 @use '../tokens/primitives/borders.scss' as *;
-@use '../tokens/primitives/spacing.scss' as *;
 @use '../tokens/primitives/motions.scss' as *;
 @use '../tokens/primitives/z-indexes.scss' as *;
 @use '../tokens/primitives/shadows.scss' as *;
@@ -46,16 +45,6 @@
 	}
 
 	@return map.get($shadow, $level);
-}
-
-@function getPrimitiveSpacing($spacing, $width: medium) {
-	$spacingVariations: map.get($primitive-spacing, $spacing);
-
-	@if meta.type-of($spacingVariations) == width {
-		@return $spacingVariations;
-	}
-
-	@return map.get($spacingVariations, $width);
 }
 
 @function getPrimitiveZIndex($index, $height: 1) {
